--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/*Global styling*/
+
 * {
   box-sizing: border-box;
 }
@@ -8,13 +10,6 @@ body {
   padding: 2rem;
 }
 
-.message.warning {
-  padding: 0.7rem;
-  margin-bottom: 1rem;
-  color: white;
-  background: orangered;
-}
-
 .fa {
   color: red;
   border-color: black;
@@ -22,11 +17,12 @@ body {
 
 .active {
   color: green !important;
+  text-decoration: underline !important;
 }
 
 .container {
-  max-width: 900px;
-  margin: 20px auto;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .article-container {
@@ -34,6 +30,10 @@ body {
   flex-wrap: wrap;
   padding-bottom: 2.5rem;
   padding-top: 1rem;
+}
+
+h3:hover {
+  text-decoration: underline;
 }
 
 .article-outer-container {
@@ -57,14 +57,28 @@ body {
   color: black;
 }
 
-.edit-form {
-  display: none;
+.menu {
+  margin-bottom: 3rem;
 }
 
-/*New styles*/
+.menu a {
+  text-decoration: none;
+  color: black;
+  padding-right: 1rem;
+}
+
+.author {
+  font-size: 14px;
+}
+
+/*Form styling*/
 
 label {
   display: block;
+}
+
+.edit-form {
+  display: none;
 }
 
 form {
@@ -73,7 +87,7 @@ form {
 }
 
 form > div {
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
 }
 
 form input,
@@ -84,25 +98,7 @@ textarea {
   font-size: 15px;
 }
 
-button {
-  width: 100%;
-  height: 40px;
-  background: olive;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.menu a {
-  text-decoration: none;
-  color: black;
-  padding-right: 1rem;
-}
-
-.container {
-  max-width: 1000px;
-  margin: 0 auto;
-}
+/*Messages styling*/
 
 .message {
   width: 100%;
@@ -118,9 +114,11 @@ button {
 }
 
 .message.warning {
-  border-color: orange;
+  padding: 0.7rem;
+  margin-bottom: 1rem;
   color: white;
-  background: orange;
+  background: orangered;
+  border: none;
 }
 
 .message.success {
@@ -129,10 +127,29 @@ button {
   background: green;
 }
 
-.edit-form {
-  display: none;
+.greeting {
+  font-size: 14px;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 1rem;
+}
+
+/*Buttons styling*/
+
+button {
+  width: 100%;
+  height: 40px;
+  background: olive;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
 .delete {
   background: darkred;
+}
+
+#clear {
+  max-width: 300px;
+  margin-left: 1rem;
 }
